data/derived/comb/progs/unify/prog6853.ml.out
Characters 50-51:
  let afactor = a::0 in
                   ^
Error: This expression has type int but an expression was expected of type
         'a list
